# chimp-chaos

./: Cargo.toml  Makefile  README.md  crd.yaml
.github/workflows/: ci.yml
.kiro/specs/chaos-operator/: design.md  requirements.md  tasks.md
crates/adapters/agents_grpc/: Cargo.toml
crates/adapters/agents_grpc/src/: lib.rs
crates/adapters/k8s/: Cargo.toml
crates/adapters/k8s/src/: lib.rs
crates/adapters/mesh_istio/: Cargo.toml
crates/adapters/mesh_istio/src/: lib.rs
crates/adapters/metrics_promql/: Cargo.toml
crates/adapters/metrics_promql/src/: lib.rs
crates/adapters/report_storage/: Cargo.toml
crates/adapters/report_storage/src/: lib.rs
crates/adapters/trace_tempo/: Cargo.toml
crates/adapters/trace_tempo/src/: lib.rs
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/application/: Cargo.toml
crates/application/benches/: impact_score.rs  promql_parse.rs
crates/application/src/: lib.rs  usecases.rs
crates/application/tests/: property.rs  reconciler_integration.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs  models.rs  ports.rs  tests.rs
crates/domain/src/tests_support/: mod.rs
crates/operator/: Cargo.toml
crates/operator/src/: controller.rs  http.rs  lib.rs  main.rs  state.rs
crates/operator/tests/: full_flow.rs  rest_integration.rs
examples/: cpu-stress.yaml  network-delay.yaml  pod-killer.yaml
src/: crd.rs  http.rs  main.rs  models.rs  reconciler.rs  service.rs  state.rs
