[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/adapters/k8s",
    "crates/adapters/mesh_istio",
    "crates/adapters/agents_grpc",
    "crates/adapters/metrics_promql",
    "crates/adapters/trace_tempo",
    "crates/adapters/report_storage",
    "crates/api-types",
    "crates/config",
    "crates/operator",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
actix-web = { version = "4", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures = "0.3.30"
kube = { version = "0.93.1", features = ["runtime", "derive", "client"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
schemars = { version = "0.8.21", features = ["chrono"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tonic = { version = "0.12.1", default-features = false, features = ["codegen", "prost", "transport"] }
prost = "0.13.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
prometheus = "0.13.4"
once_cell = "1.20.2"
thiserror = "1.0.64"
rand = "0.8.5"
url = "2.5.2"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["client", "http1", "http2"] }
reqwest = { version = "0.12.7", features = ["json", "gzip", "stream"] }
proptest = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }
