[package]
name = "chimp-chaos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = "1"
