[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
api-types = { path = "../api-types" }
application = { path = "../application" }
domain = { path = "../domain" }
adapters-k8s = { path = "../adapters/k8s" }
adapters-mesh_istio = { path = "../adapters/mesh_istio" }
adapters-agents_grpc = { path = "../adapters/agents_grpc" }
adapters-metrics_promql = { path = "../adapters/metrics_promql" }
adapters-trace_tempo = { path = "../adapters/trace_tempo" }
adapters-report_storage = { path = "../adapters/report_storage" }
config-layered = { path = "../config" }

