[package]
name = "adapters-agents_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
domain = { path = "../../domain" }
async-trait = { workspace = true }

