[package]
name = "adapters-mesh_istio"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
domain = { path = "../../domain" }
tokio = { workspace = true }
async-trait = { workspace = true }

