[package]
name = "adapters-report_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
domain = { path = "../../domain" }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }

