[package]
name = "adapters-trace_tempo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
domain = { path = "../../domain" }
config-layered = { path = "../../config" }
tokio = { workspace = true }
async-trait = { workspace = true }

